reports/introduction-ant-colony.log
Traceback (most recent call last):
  File "C:\Users\unerue\miniconda3\envs\vision\lib\site-packages\jupyter_cache\executors\utils.py", line 51, in single_nb_execution
    executenb(
  File "C:\Users\unerue\miniconda3\envs\vision\lib\site-packages\nbclient\client.py", line 1204, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "C:\Users\unerue\miniconda3\envs\vision\lib\site-packages\nbclient\util.py", line 84, in wrapped
    return just_run(coro(*args, **kwargs))
  File "C:\Users\unerue\miniconda3\envs\vision\lib\site-packages\nbclient\util.py", line 62, in just_run
    return loop.run_until_complete(coro)
  File "C:\Users\unerue\miniconda3\envs\vision\lib\asyncio\base_events.py", line 642, in run_until_complete
    return future.result()
  File "C:\Users\unerue\miniconda3\envs\vision\lib\site-packages\nbclient\client.py", line 663, in async_execute
    await self.async_execute_cell(
  File "C:\Users\unerue\miniconda3\envs\vision\lib\site-packages\nbclient\client.py", line 965, in async_execute_cell
    await self._check_raise_for_error(cell, cell_index, exec_reply)
  File "C:\Users\unerue\miniconda3\envs\vision\lib\site-packages\nbclient\client.py", line 862, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
ë‹¨ì 

* ë§¤ìš° ë‹¨ìˆœí•œ ê·¸ë˜í”„ì—ì„œëŠ” ìµœë‹¨ ê²½ë¡œë¥¼ ì˜ ì°¾ìœ¼ë‚˜, ë¬¸ì œê°€ ë³µì¡í•´ì§ˆìˆ˜ë¡ ì•ˆì •ì ì´ì§€ ëª»í•˜ê³  íŒŒë¼ë¯¸í„°ì— ë¯¼ê°í•´ì„œ ì„±ëŠ¥ì´ ë§¤ìš° ë–¨ì–´ì§„ë‹¤.
* í•´ì˜ í’ˆì§ˆì— ê¸°ì´ˆí•œ í˜ë¡œëª¬ ê°±ì‹ ì´ ê·¸ë ‡ì§€ ì•ŠëŠ” ê²½ìš°ë³´ë‹¤ ì›”ë“±íˆ ì¢‹ì‚ ã…ë¥¼ ì°¾ì•˜ë‹¤. 

------------------

[1;36m  Input [1;32mIn [1][1;36m[0m
[1;33m    * ë§¤ìš° ë‹¨ìˆœí•œ ê·¸ë˜í”„ì—ì„œëŠ” ìµœë‹¨ ê²½ë¡œë¥¼ ì˜ ì°¾ìœ¼ë‚˜, ë¬¸ì œê°€ ë³µì¡í•´ì§ˆìˆ˜ë¡ ì•ˆì •ì ì´ì§€ ëª»í•˜ê³  íŒŒë¼ë¯¸í„°ì— ë¯¼ê°í•´ì„œ ì„±ëŠ¥ì´ ë§¤ìš° ë–¨ì–´ì§„ë‹¤.[0m
[1;37m         ^[0m
[1;31mSyntaxError[0m[1;31m:[0m invalid syntax

SyntaxError: invalid syntax (2751174477.py, line 3)

